# sshed

./: .gitignore  Cargo.toml  config.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  default.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs
crates/hosts/: Cargo.toml
crates/hosts/src/: database.rs  host.rs  hosts.rs  querry.rs
crates/hosts/src/host/: address.rs  group.rs  table.rs  tag.rs
crates/ssh-parser/: Cargo.toml
crates/ssh-parser/src/: parser.rs
crates/ssh_session/: Cargo.toml
crates/sshed/: Cargo.toml
crates/sshed/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: ui.rs
example_config_path/: config
example_config_path/config.d/: some
