[workspace]
resolver = "2"
members = [
    "crates/sshed",
    "crates/hosts",
    "crates/config",
    "crates/cli",
    "crates/db",
    "crates/ssh-parser", "crates/ssh_session",
]

default-members = ["crates/sshed"]

[workspace.dependencies]
sshed = { path = "crates/sshed" }
hosts = { path = "crates/hosts" }
config = { path = "crates/config" }
cli = { path = "crates/cli" }
db = { path = "crates/db" }
ssh_parser = { path = "crates/ssh-parser" }

#
# External Crates
#
clap = { version = "*", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.6"
serde = "1.0.216"
dirs = "5.0"
notify = "6.1.1"
ssh2-config = { git = "https://github.com/jakucermak/ssh2-config.git" }
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
tokio = "1"
