[package]
name = "sshed"
version = "0.0.0"
edition = "2021"

[dependencies]
hosts.workspace = true
config.workspace = true
cli.workspace = true
env_logger.workspace = true
db.workspace = true
ssh_parser.workspace = true

#
# Extern crates
#
notify.workspace = true
surrealdb.workspace = true
tokio.workspace = true
